feat: get paper update
