# app/authors/routes.py
@@ -1,4 +1,4 @@
-from flask import Blueprint, request, jsonify, current_app
+from flask import Blueprint, request, jsonify, current_app, send_file
 from flask_jwt_extended import jwt_required, get_jwt_identity
 from app.models import User, Role, CoAuthor, Paper
 from .helpers import check_paper_limits
@@ -48,10 +48,12 @@ def submitPaper():
         return jsonify({"msg": "Only PDF files are allowed"}), 400
     
     file_name = secure_filename(file.filename)
-    upload_folder = os.path.join(current_app.config['UPLOAD_FOLDER'], theme, subtheme)
+    upload_folder = os.path.join(current_app.config['UPLOAD_FOLDER'], theme, subtheme).replace(" ", "_")
+    print(upload_folder)
     os.makedirs(upload_folder, exist_ok=True)
     
-    file_path = os.path.join(upload_folder, file_name)
+    file_path = os.path.join(upload_folder, file_name).replace(" ", "_")
+    print(file_path)
     file.save(file_path)
     
     paper = Paper(
@@ -85,4 +87,44 @@ def submitPaper():
     return jsonify({"msg": "Paper submitted successfully"}), 201
     
     
+@author_bp.route("/get-papers", methods=["GET"])
+@jwt_required()
+def getPapers():
+    current_user = get_jwt_identity()
     
+    user_papers = Paper.query.filter_by(author_id=current_user).all()
+    
+    if not user_papers:
+        return None
+    
+    return jsonify([paper.serialize() for paper in user_papers]), 200
+
+@author_bp.route('/files', methods=['POST'])
+@jwt_required()
+def get_file():
+    current_user = get_jwt_identity()
+    user = User.query.filter_by(id=current_user).first()
+
+    if not user:
+        return jsonify({"msg": "Invalid user"}), 404
+
+    data = request.json
+    file_url = data.get("file_url")
+
+    normalized_path = os.path.normpath(file_url)
+    print(f"Normalized path: {normalized_path}")
+
+    paper = Paper.query.filter_by(file_path=normalized_path).first()
+
+    if paper and paper.author_id == user.id:
+        file_path = os.path.join(os.getcwd(), normalized_path)
+        print(f"Full file path: {file_path}")
+
+        if os.path.exists(file_path):
+            print("File found, sending file...")
+            return send_file(file_path, as_attachment=True)
+        else:
+            return jsonify({"msg": "File not found"}), 404
+    else:
+        return jsonify({"msg": "Requested paper doesn't exist"}), 404
+        return jsonify({"msg": "requested paper doesn't exist"}), 404
